<resources>
    <string name="app_name">Tienda de Celulares</string>
    <string name="bienvenido">Bienvenido!</string>
    <string name="cargando">Cargando...</string>
    <string name="desarrollador">Desarrollado por Valentín Gamas Maldonado</string>

    <string name="tituloMenuPrincilal">Menu Principal</string>
    <string name="menuInicio">Inicio</string>
    <string name="registroAdmin">Registrar Admin</string>
    <string name="salir">Cerrar Sesión</string>
    <string name="abrirMenu">Abrir barra de navegación</string>
    <string name="cerrarMenu">Cerrar barra de navegación</string>

    <string name="tituloCategoria">Elige una Categoría</string>
    <string name="iphone">IPHONE</string>
    <string name="samsung">SAMSUNG</string>
    <string name="huawei">HUAWEI</string>
    <string name="motorola">MOTOROLA</string>
    <string name="nokia">NOKIA</string>
    <string name="oppo">OPPO</string>
    <string name="xiaomi">XIAOMI</string>

    <string name="tituloAdministrador">Registro de Administrador</string>
    <string name="correoAdmin">Correo Electrónico</string>
    <string name="contrasenaAdmin">Contraseña</string>
    <string name="nombresAdmin">Nombres</string>
    <string name="apellidosAdmin">Apellidos</string>
    <string name="usuarioAdmin">Nombre de Usuario</string>
    <string name="fechaAdmin">Fecha de Nacimiento</string>
    <string name="fechaRegistro">Fecha</string>
    <string name="registrarAdmin">REGISTRAR</string>
    <string name="LoginAdministrador">Login de Administrador</string>

    <string name="camposVacios">Por favor llenar todos los campos</string>

    <string name="IngreseDatos">Ingrese sus Datos</string>
    <string name="RegistroCliente"><u>Regístrese aquí</u></string>
    <string name="OlvidoCliente"><u>Olvidó su contraseña?</u></string>
    <string name="PerfilCliente">Perfil</string>
    <string name="IniciarSesion">Inicio de Sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>