<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Administrador.RegistroAdmin">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15sp"
        >

         <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tituloAdministrador"
            android:textAppearance="@style/titulo"
            android:gravity="center_horizontal"
            />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10sp"
            android:layout_gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/fechaRegistro"
                android:textAppearance="@style/normal"
                android:gravity="center_vertical"
                />

            <TextView
                android:id="@+id/fechaAdmin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="@style/normal"
                android:layout_marginLeft="10dp"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:src="@drawable/administrador"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/correoAdmin"
                android:hint="@string/correoAdmin"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/campo"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/contrasenaAdmin"
                android:hint="@string/contrasenaAdmin"
                android:inputType="textPassword"
                android:textAppearance="@style/campo"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/nombresAdmin"
                android:hint="@string/nombresAdmin"
                android:inputType="textCapWords|textAutoCorrect"
                android:textAppearance="@style/campo"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/apellidosAdmin"
                android:hint="@string/apellidosAdmin"
                android:inputType="textCapWords|textAutoCorrect"
                android:textAppearance="@style/campo"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/usuarioAdmin"
                android:hint="@string/usuarioAdmin"
                android:inputType="textCapWords|textAutoCorrect"
                android:textAppearance="@style/campo"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/nacimientoAdmin"
                android:hint="@string/fechaAdmin"
                android:inputType="date"
                android:textAppearance="@style/campo"
                android:clickable="true"
                android:focusable="false"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:text="@string/registrarAdmin"
            android:textColor="@color/colorTextoBoton"
            android:textSize="20sp"
            android:background="@drawable/btn_app"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>