<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimario"
    android:gravity="center_horizontal"
    tools:context=".Loading">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text= "@string/bienvenido"
            android:textSize="30sp"
            android:textColor="@color/white"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="200sp"
            android:layout_height="200sp"
            android:layout_marginTop="50sp"
            android:src="@drawable/logo_sena"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:text="@string/cargando"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150sp"
            android:text="@string/desarrollador"
            android:textSize="12sp"
            android:textColor="@color/white"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>