<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_marginHorizontal="20sp"
    tools:context=".Login">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            style="@style/titulo"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/LoginAdministrador"
            style="@style/titulo"
            android:layout_marginTop="20sp"
            />

        <ImageView
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:src="@drawable/imagen_login"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/titulo"
            android:text="@string/IngreseDatos"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/correoLogin"
                android:hint="@string/correoAdmin"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/campo"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/passwordLogin"
                android:hint="@string/contrasenaAdmin"
                android:inputType="textPassword"
                android:textAppearance="@style/campo"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:text="INGRESAR"
            android:textColor="@color/colorTextoBoton"
            android:textSize="20sp"
            android:background="@drawable/btn_app"
            />

        <!--
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            >

            <Button
                android:id="@+id/btn_RegistroCliente"
                android:layout_width="150sp"
                android:layout_height="30sp"
                android:layout_margin="10sp"
                style="@style/hipervinculo"
                android:text="@string/RegistroCliente"
                android:gravity="center"
                />

            <Button
                android:id="@+id/btn_PasswordCliente"
                android:layout_width="150sp"
                android:layout_height="30sp"
                android:layout_margin="10sp"
                style="@style/hipervinculo"
                android:text="@string/OlvidoCliente"
                android:gravity="center"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>
-->

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>